--- a/css/styles.css
+++ b/css/styles.css
@@ -4,32 +4,6 @@ body {
     margin: 0;
 }
 
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ul {
-    margin: 0;
-    padding: 0;
-}
-
-ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-}
-
-
 .container {
     max-width: 1158px;
     padding-left: 15px;
@@ -38,18 +12,18 @@ img {
     margin-right: auto;
 }
 
-
 header {
     border-bottom: 2px solid #E7E9FC;
     padding: 24px 0;
-
-}
-
-.header-container {
     display: flex;
     align-items: center;
 }
 
+header .container {
+    display: flex;
+    align-items: center;
+    padding: 0 156px;
+}
 
 nav {
     display: flex;
@@ -57,19 +31,24 @@ nav {
     margin-left: 40px;
 }
 
-.menuItems {
-    display: flex;
-    gap: 40px;
+.menuItems,
+.contactItems,
+.filters ul,
+section ul {
+    list-style: none;
+    padding: 0;
     margin: 0;
+    display: flex;
 }
 
+.menuItems {
+    gap: 40px;
+}
 
 .contactItems {
     margin-left: auto;
-    display: flex;
     gap: 20px;
 }
-
 
 .menuItems li a,
 .contactItems a,
@@ -81,7 +60,6 @@ section ul li a {
     line-height: 1.5;
     transition: color 0.3s ease;
 }
-
 
 .menuItems .active a {
     color: #404BBF;
@@ -99,7 +77,6 @@ section ul li a {
     top: 100%;
 }
 
-
 .contactItems a {
     font-weight: 400;
     color: #434455;
@@ -112,15 +89,11 @@ section ul li a:focus {
     color: #606275;
 }
 
-
 .filters ul {
-    display: flex;
     justify-content: center;
     gap: 24px;
     padding: 60px 0;
-
 }
-
 
 .filter-btn {
     color: #4D5AE5;
@@ -143,41 +116,32 @@ section ul li a:focus {
     color: #ffffff;
 }
 
-
 .section {
     padding-top: 60px;
     padding-bottom: 60px;
 }
 
 section ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    grid-template-columns: repeat(3, 1fr);
     gap: 24px;
-    margin: 0;
-    padding: 0;
+    margin: 0 156px;
+    display: grid;
 }
 
-
-.portfolio-card {
-    border-bottom: 1px solid #ccc;
+section ul li {
+    border-bottom: 1px solid #E7E9FC;
     padding-bottom: 20px;
 }
-
 
 footer {
     background: #2E2F42;
     color: #FFFFFF;
     text-align: center;
-    padding: 24px;
+    padding: 24px 0;
     margin-top: 60px;
     font-size: 16px;
 }
 
-.footer-container {
-    max-width: 1158px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
+footer .container {
+    padding: 0 156px;
 }
